style vscode with century 21 colors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,22 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#3fc7da",
-    "activityBar.background": "#3fc7da",
+    "activityBar.activeBackground": "#cec3a9",
+    "activityBar.background": "#cec3a9",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#d629c1",
+    "activityBarBadge.background": "#518e7c",
     "activityBarBadge.foreground": "#e7e7e7",
     "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#3fc7da",
-    "statusBar.background": "#25aec1",
+    "sash.hoverBorder": "#cec3a9",
+    "statusBar.background": "#bbad89",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#1d8796",
-    "statusBarItem.remoteBackground": "#25aec1",
+    "statusBarItem.hoverBackground": "#a89669",
+    "statusBarItem.remoteBackground": "#bbad89",
     "statusBarItem.remoteForeground": "#15202b",
-    "titleBar.activeBackground": "#25aec1",
+    "titleBar.activeBackground": "#bbad89",
     "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#25aec199",
+    "titleBar.inactiveBackground": "#bbad8999",
     "titleBar.inactiveForeground": "#15202b99"
-  }
+  },
+  "peacock.color": "#BBAD89"
 }
