--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.15.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^3.0.0-beta.0",
     "styled-components": "^6.0.7",
+    "sweetalert2": "^11.7.21",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
